Created a common fuse resources for the demo projects
