# sample-json-validation-api/src/main/resources/openapi/openapi.json
@@ -1,161 +1,187 @@
 {
-  "swagger" : "2.0",
-  "info" : {
-    "description" : "A simple API to test the Camel json-schema-validator component",
-    "version" : "1.0",
-    "title" : "Sample JSON Validation API",
-    "contact" : {
-      "name" : "Jean Nyilimbibi"
+    "swagger": "2.0",
+    "info": {
+        "title": "Sample JSON Validation API",
+        "description": "A simple API to test the Camel json-schema-validator component",
+        "contact": {
+            "name": "Jean Nyilimbibi"
+        },
+        "license": {
+            "name": "MIT License",
+            "url": "https://opensource.org/licenses/MIT"
+        },
+        "version": "1.0.0"
     },
-    "license" : {
-      "name" : "MIT License",
-      "url" : "https://opensource.org/licenses/MIT"
-    }
-  },
-  "tags" : [ {
-    "name" : "RESTDSL"
-  }, {
-    "name" : "json-schema-validator",
-    "description" : ""
-  }, {
-    "name" : "fuse7springboot",
-    "description" : ""
-  } ],
-  "consumes" : [ "application/json" ],
-  "produces" : [ "application/json" ],
-  "paths" : {
-    "/validateMembership" : {
-      "post" : {
-        "summary" : "Validate Membership",
-        "description" : "Validates a `Membership` instance",
-        "operationId" : "createMembership",
-        "parameters" : [ {
-          "in" : "body",
-          "name" : "body",
-          "description" : "A new `Membership` to be created.",
-          "required" : true,
-          "schema" : {
-            "$ref" : "#/definitions/Membership"
-          }
-        } ],
-        "responses" : {
-          "200" : {
-            "description" : "`Membership`JSON data validated",
-            "schema" : {
-              "$ref" : "#/definitions/ValidationResult"
+    "consumes": [
+        "application/json"
+    ],
+    "produces": [
+        "application/json"
+    ],
+    "paths": {
+        "/validateMembershipJSON": {
+            "post": {
+                "summary": "Validate Membership JSON instance",
+                "description": "Validates a `Membership` JSON instance",
+                "operationId": "validateMembershipJSON",
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "A `Membership` JSON instance to be validated.",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/Membership"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "`Membership`JSON data validated",
+                        "schema": {
+                            "$ref": "#/definitions/ValidationResult"
+                        }
+                    },
+                    "400": {
+                        "description": "`Membership`JSON data not valid",
+                        "schema": {
+                            "$ref": "#/definitions/ValidationResult"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/Error"
+                        }
+                    }
+                }
             }
-          },
-          "400" : {
-            "description" : "`Membership`JSON data not valid",
-            "schema" : {
-              "$ref" : "#/definitions/ValidationResult"
-            }
-          },
-          "500" : {
-            "description" : "Internal server error",
-            "schema" : {
-              "$ref" : "#/definitions/Error"
-            }
-          }
         }
-      }
-    }
-  },
-  "definitions" : {
-    "Membership" : {
-      "type" : "object",
-      "required" : [ "changedBy", "endDate", "enrolmentDate", "memberID", "requestID", "requestType", "vipOnInvitation" ],
-      "properties" : {
-        "requestType" : {
-          "type" : "string"
-        },
-        "requestID" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
-        "memberID" : {
-          "type" : "integer",
-          "format" : "int32"
-        },
-        "status" : {
-          "type" : "string",
-          "minLength" : 1,
-          "maxLength" : 1,
-          "enum" : [ "A", "B", "C" ]
-        },
-        "enrolmentDate" : {
-          "type" : "string",
-          "format" : "date"
-        },
-        "changedBy" : {
-          "type" : "string"
-        },
-        "forcedLevelCode" : {
-          "type" : "string"
-        },
-        "vipOnInvitation" : {
-          "type" : "string",
-          "minLength" : 1,
-          "maxLength" : 1,
-          "enum" : [ "N", "Y" ]
-        },
-        "startDate" : {
-          "type" : "string",
-          "format" : "date"
-        },
-        "endDate" : {
-          "type" : "string",
-          "format" : "date"
-        }
-      },
-      "title" : "Root Type for membership",
-      "description" : "Membership data ",
-      "example" : "{\n    \"requestType\": \"API\",\n    \"requestID\": 5948,\n    \"memberID\": 85623617,\n    \"status\": \"A\",\n    \"enrolmentDate\": \"2019-06-16\",\n    \"changedBy\": \"jeanNyil\",\n    \"forcedLevelCode\": \"69\",\n    \"vipOnInvitation\": \"Y\",\n    \"startDate\": \"2019-06-16\",\n    \"endDate\": \"2100-06-16\"\n}"
     },
-    "ValidationResult" : {
-      "type" : "object",
-      "properties" : {
-        "validationResult" : {
-          "type" : "object",
-          "properties" : {
-            "status" : {
-              "type" : "string",
-              "minLength" : 2,
-              "maxLength" : 2,
-              "enum" : [ "OK", "KO" ]
+    "definitions": {
+        "Membership": {
+            "title": "Root Type for membership",
+            "description": "Membership data ",
+            "required": [
+                "changedBy",
+                "endDate",
+                "enrolmentDate",
+                "memberID",
+                "requestID",
+                "requestType",
+                "vipOnInvitation"
+            ],
+            "type": "object",
+            "properties": {
+                "requestType": {
+                    "type": "string"
+                },
+                "requestID": {
+                    "format": "int32",
+                    "type": "integer"
+                },
+                "memberID": {
+                    "format": "int32",
+                    "type": "integer"
+                },
+                "status": {
+                    "maxLength": 1,
+                    "minLength": 1,
+                    "enum": [
+                        "A",
+                        "B",
+                        "C"
+                    ],
+                    "type": "string"
+                },
+                "enrolmentDate": {
+                    "format": "date",
+                    "type": "string"
+                },
+                "changedBy": {
+                    "type": "string"
+                },
+                "forcedLevelCode": {
+                    "type": "string"
+                },
+                "vipOnInvitation": {
+                    "maxLength": 1,
+                    "minLength": 1,
+                    "enum": [
+                        "N",
+                        "Y"
+                    ],
+                    "type": "string"
+                },
+                "startDate": {
+                    "format": "date",
+                    "type": "string"
+                },
+                "endDate": {
+                    "format": "date",
+                    "type": "string"
+                }
             },
-            "errorMessage" : {
-              "type" : "string"
-            }
-          }
+            "example": "{\n    \"requestType\": \"API\",\n    \"requestID\": 5948,\n    \"memberID\": 85623617,\n    \"status\": \"A\",\n    \"enrolmentDate\": \"2019-06-16\",\n    \"changedBy\": \"jeanNyil\",\n    \"forcedLevelCode\": \"69\",\n    \"vipOnInvitation\": \"Y\",\n    \"startDate\": \"2019-06-16\",\n    \"endDate\": \"2100-06-16\"\n}"
+        },
+        "ValidationResult": {
+            "title": "Root Type for ValidationResult",
+            "description": "Validation Result   ",
+            "type": "object",
+            "properties": {
+                "validationResult": {
+                    "type": "object",
+                    "properties": {
+                        "status": {
+                            "maxLength": 2,
+                            "minLength": 2,
+                            "enum": [
+                                "OK",
+                                "KO"
+                            ],
+                            "type": "string"
+                        },
+                        "errorMessage": {
+                            "type": "string"
+                        }
+                    }
+                }
+            },
+            "example": "{\n    \"validationResult\": {\n        \"status\": \"KO\",\n        \"errorMessage\": \"6 errors found\"\n    }\n}"
+        },
+        "Error": {
+            "title": "Root Type for Error",
+            "description": "Error message structure",
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "object",
+                    "properties": {
+                        "id": {
+                            "type": "string"
+                        },
+                        "description": {
+                            "type": "string"
+                        },
+                        "messages": {
+                            "type": "array",
+                            "items": {}
+                        }
+                    }
+                }
+            },
+            "example": "{\n\t\"error\": {\n\t\t\"id\": \"500\",\n\t\t\"description\": \"Internal Server Error\",\n\t\t\"messages\": [\n\t\t\t\"java.lang.Exception: Mocked error message\"\n\t\t]\n\t}\n}"
         }
-      },
-      "title" : "Root Type for ValidationResult",
-      "description" : "Validation Result   ",
-      "example" : "{\n    \"validationResult\": {\n        \"status\": \"KO\",\n        \"errorMessage\": \"6 errors found\"\n    }\n}"
     },
-    "Error" : {
-      "type" : "object",
-      "properties" : {
-        "error" : {
-          "type" : "object",
-          "properties" : {
-            "id" : {
-              "type" : "string"
-            },
-            "description" : {
-              "type" : "string"
-            },
-            "messages" : {
-              "type" : "array",
-              "items" : { }
-            }
-          }
+    "tags": [
+        {
+            "name": "RESTDSL"
+        },
+        {
+            "name": "json-schema-validator"
+        },
+        {
+            "name": "fuse7springboot"
         }
-      },
-      "title" : "Root Type for Error",
-      "description" : "Error message structure",
-      "example" : "{\n\t\"error\": {\n\t\t\"id\": \"500\",\n\t\t\"description\": \"Internal Server Error\",\n\t\t\"messages\": [\n\t\t\t\"java.lang.Exception: Mocked error message\"\n\t\t]\n\t}\n}"
-    }
-  }
+    ]
 }
